manifests/smee/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: smee
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: smee
  template:
    metadata:
      labels:
        app.kubernetes.io/component: smee
    spec:
      containers:
      - name: smee
        image: ghcr.io/probot/smee.io
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
          name: web
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 100Mi
