manifests/smee/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: smee
spec:
  ports:
  - name: webhook
    protocol: TCP
    port: 80
    targetPort: web
  selector:
    app.kubernetes.io/component: smee
