manifests/smee/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: smee
spec:
  to:
    kind: Service
    name: smee
